Move header styles from index.css to style.css
Consolidated header CSS rules into style.css and removed them from index.css for better maintainability. Minor whitespace adjustment in index.php.

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ h4, h5 {
     font-family: "Exo", serif;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+
+    font-size: 30px;
+
+    background-color: var(--color-blue);
+}
+
 nav {
     display: flex;
     justify-content: space-around;
