--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ nav .nav-button i {
     align-content: center;
     transform: translateY(-10px);
 
-    background-color: hsl(from var(--color-blue) h s calc(l - 5));
+    background-color: var(--color-yellow); /*hsl(from var(--color-blue) h s calc(l - 5));*/
 
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
 
