--- a/css/diary.css
+++ b/css/diary.css
@@ -15,3 +15,17 @@
 #currentMonth {
     margin: 20px 0;
 }
+
+dialog {
+    border-radius: 10px;
+
+}
+
+dialog::backdrop {
+    opacity: 0.75;
+    background: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,1));
+}
+
+dialog img {
+    width: 100%;
+}
