--- a/css/tracker.css
+++ b/css/tracker.css
@@ -15,6 +15,8 @@ form{
 
 .form-category{
     margin-left: 28px;
+    margin-bottom: 5px;
+    margin-top: 10px;
 }
 
 .form-content{
@@ -54,6 +56,57 @@ i{
     color:darkgreen;
 }
 
+.input{
+    appearance: none;
+    accent-color: #4CAF50; /* green */
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    background-color: #FE938C;
+    border-radius: 5px;
+}
+
+.input:hover {
+    border: 2px solid #BBDD95;
+    box-shadow: 0 0 4px rgba(76, 175, 80, 0.5);
+}
+
+.input:checked{
+    background-color: #BBDD95;
+    border-color: #BBDD95;
+}
+
+.input:checked::after {
+    content: "✔";
+    color: white;
+    font-size: 17px;
+    position: absolute;
+    top: -2px;
+    left: 3px;
+}
+h2 {
+    border-top: 2px solid #FFB30F;
+    width: 327px;
+}
+
+.fa-1{
+    color: red;
+}
+.fa-2{
+    color: orangered;
+}
+
+.fa-3{
+    color: yellow;
+}
+
+.fa-4{
+    color: greenyellow;
+}
+
+.fa-5{
+    color:darkgreen;
+}
 
 
 
@@ -62,19 +115,5 @@ i{
 
 
 
-/*.form-field{*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    !*justify-content: space-evenly;*!*/
-/*}*/
 
-/*.form-content-container{*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*}*/
 
-/*.form-content{*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;*/
-/*}*/
