--- a/css/tracker.css
+++ b/css/tracker.css
@@ -3,7 +3,7 @@
 }
 
 main{
-    height: auto;
+    height: 2000px;
     padding: 10px 0;
 }
 
@@ -77,12 +77,12 @@ i{
 }
 
 .input:checked::after {
-    content: "✔";
-    color: white;
-    font-size: 17px;
-    position: absolute;
-    top: -2px;
-    left: 3px;
+    /*content: "✔";*/
+    /*color: white;*/
+    /*font-size: 17px;*/
+    /*position: absolute;*/
+    /*top: -2px;*/
+    /*left: 3px;*/
 }
 h2 {
     border-top: 2px solid #FFB30F;
@@ -107,6 +107,42 @@ h2 {
 .fa-5{
     color:darkgreen;
 }
+
+/*.fa-smoking{*/
+/*    color: red;*/
+/*}*/
+
+/*.fa-hand-point-up{*/
+/*    color: red;*/
+/*}*/
+
+/*.fa-clock{*/
+/*    color: red;*/
+/*}*/
+
+/*.fa-wine-glass{*/
+/*    color: red;*/
+/*}*/
+
+/*.fa-book-open-reader{*/
+/*    color:darkgreen;*/
+/*}*/
+
+/*.fa-gamepad{*/
+/*    color:darkgreen;*/
+/*}*/
+
+/*.fa-music{*/
+/*    color:darkgreen;*/
+/*}*/
+
+/*.fa-pen{*/
+/*    color:darkgreen;*/
+/*}*/
+
+/*.fa-video{*/
+/*    color:darkgreen;*/
+/*}*/
 
 
 
