--- a/css/diary.css
+++ b/css/diary.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Poppins";
+}
+
 #calendar, #days {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
@@ -54,7 +58,7 @@ dialog img {
 }
 
 .day.has-image {
-    color: white; /* dagnummer beter leesbaar */
+    color: white;
 }
 
 .day-label {
@@ -64,4 +68,54 @@ dialog img {
     font-size: 0.9rem;
     font-weight: bold;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.7);
+}
+
+#monthNavigation {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#prevMonth, #nextMonth {
+    flex: 1;
+    text-align: center;
+    background-color: var(--color-blue);
+    border-radius: 10px;
+    padding: 5px;
+    margin: 0 10px;
+    font-family: "Poppins";
+}
+
+.modal-flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.closeButton {
+    padding: 20px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    position: relative;
+}
+
+/* Creates the 'cross' close button manually */
+.closeButton::before,
+.closeButton::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 2px;
+    height: 20px;
+    background-color: black;
+    transform-origin: center;
+}
+
+.closeButton::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.closeButton::after {
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
