--- a/css/notes.css
+++ b/css/notes.css
@@ -1,5 +1,8 @@
 main {
     padding: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 section.form {
@@ -7,10 +10,15 @@ section.form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    width: 75%;
+
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 section.form i {
-    transform: translate(135px, 40px);
+    transform: translate(145px, 40px);
 
     font-size: 2rem;
 }
@@ -18,6 +26,10 @@ section.form i {
 form {
     display: flex;
     flex-direction: column;
+}
+
+form input#image {
+    margin-top: 20px;
 }
 
 form button {
