Add diary button and image, update button styles
Added a 'Go to Diary' button with icon to tracker.php and updated CSS to style the new .diary-button class. Also added a new diary image to user_content/img.

--- a/css/style.css
+++ b/css/style.css
@@ -138,10 +138,12 @@ section.alreadyFilled div.buttons {
     border-radius: 10px;
 }
 
-.insights-button {
+.insights-button, .diary-button {
     all: unset;
 
     padding: 10px 20px;
+
+    margin-bottom: 10px;
 
     background-color: var(--color-blue);
     border-radius: 10px;
