--- a/css/diary.css
+++ b/css/diary.css
@@ -21,17 +21,18 @@ body {
 }
 
 dialog {
-    border-radius: 10px;
+    border-radius: 20px;
 
 }
 
 dialog::backdrop {
     opacity: 0.75;
-    background: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,1));
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
 }
 
 dialog img {
     width: 100%;
+    border-radius: 10px;
 }
 
 .calendar-thumbnail {
@@ -67,7 +68,7 @@ dialog img {
     right: 4px;
     font-size: 0.9rem;
     font-weight: bold;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.7);
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
 #monthNavigation {
@@ -118,4 +119,34 @@ dialog img {
 
 .closeButton::after {
     transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+dialog h1 {
+    margin-bottom: 10px;
+}
+
+dialog p {
+    margin-top: 0;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0 0 10px 0;
+    margin: 0;
+}
+
+li {
+    padding: 5px;
+    margin: 5px 0;
+
+    background-color: #e3e3e3;
+    border-radius: 5px;
+}
+
+.positive-marker {
+    background-color: var(--color-green);
+}
+
+.negative-marker {
+    background-color: var(--color-pink);
 }
