--- a/css/index.css
+++ b/css/index.css
@@ -27,3 +27,51 @@ section.step-counter {
     border-top-right-radius: 150px;
     clip-path: inset(0 50% 0 0);
 }
+
+section.mood-selector {
+    padding-top: 75px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.form-category {
+    margin-left: 28px;
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.form-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 5px 0;
+}
+
+.form-option {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+i {
+    font-size: 35px;
+}
+
+.input-radio {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background-color: #FE938C;
+    border-radius: 50%;
+}
+
+.input-radio:checked::after {
+    content: "✔";
+    color: black;
+    font-size: 17px;
+}
