--- a/css/animation.css
+++ b/css/animation.css
@@ -6,13 +6,19 @@
     position: absolute;
     transform-origin: center;
     transition: all 0.5s ease-out;
-    margin-left: 30vw;
+    /*margin-left: 30vw;*/
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+
 }
 
 /* Initial state */
 .logo {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(0.3);
 }
 
 /* Animation classes */
@@ -23,7 +29,7 @@
 
 @keyframes growAndFade {
     0% {
-        transform: scale(10);
+        transform: scale(5);
         opacity: 1;
     }
 
